# zhuji

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_project_budget.py
backend/src/: config.py  main.py
backend/src/api/: _ownership.py  assets.py  auth.py  demo.py  nodes.py  projects.py  purchases.py  reminders.py
backend/src/auth/: dependencies.py  rate_limit.py  security.py
backend/src/db/: session.py
backend/src/models/: base.py
backend/src/schemas/: api.py
backend/src/services/: demo.py  demo_templates.json  storage.py
backend/tests/: conftest.py  test_assets.py  test_auth.py  test_crud.py  test_demo.py  test_init_template.py  test_isolation.py  test_snapshot.py
deploy/: entrypoint.sh  nginx.conf.template
docs/: USER_GUIDE.md
e2e/: helpers.ts  m2.spec.ts  m3.spec.ts  m5.spec.ts  mobile-audit.spec.ts  node-picker-a11y.spec.ts  retro-improvements.spec.ts  zhuji.spec.ts
infra/: README.md  main.bicep
infra/modules/: appservice.bicep
infra/parameters/: prod.bicepparam
src/: App.tsx  main.tsx  styles.css
src/components/: CategoryManager.tsx  ConfirmDialog.tsx  EmptyHero.tsx  ErrorBoundary.tsx  KeyboardHelp.tsx  (+14 more)
(+41 files in other folders)
